# meson-tools

./: .gitignore  AUTHORS  ChangeLog  Makefile  README.md  aml.h  amlbootenc-gxl.c  amlbootimg-gxl.c  amlbootsig-gxl.c  amlbootsig.c  amlinfo.c  autogen.sh  configure.ac  fip.h  meson.h  test.c  unamlbootsig.c
src/: Makefile.am  amlbootsig.c
